UIとAPIの修正を反映
